--- a/src/app/components/general/contactpoint/contactpoint.component.scss
+++ b/src/app/components/general/contactpoint/contactpoint.component.scss
@@ -3,11 +3,8 @@
 
 :host {
     @include flex-e2e;
-    @include slimpill;
+    border-top:$darkborder;
     width:100%;
-    & h5 {
-        @include pill;
-    }
     & .contactButtons{
         @include flex-e2e;
     }
