--- a/src/app/components/general/button/button.component.html
+++ b/src/app/components/general/button/button.component.html
@@ -1,3 +1,2 @@
-<span (click)="onClick()">
-    <img src="{{this.type.image.path}}" alt="icon for {{this.name}} link">
-</span>
+<img src="{{type.image.path}}" alt="icon for {{name}} link" loading="lazy" (click)="onClick()">
+<p *ngIf="type === lt.OTHER || type === lt.PERSON" (click)="onClick()">{{name}}</p>
