--- a/src/app/components/views/career/career.component.html
+++ b/src/app/components/views/career/career.component.html
@@ -1,3 +1,4 @@
+<h1>Career</h1>
 <div *ngFor="let career of careers">
     <ng-container *ngIf="career.type === ct.SCHOOL ? career.school : career.workplace as item">
         <app-contentbox
@@ -8,11 +9,11 @@
             link="{{item.url}}"> 
             <div class="bottomLinks">
                 <div #cp class="contactPoints">
-                    <img src="{{contactIcon.path}}" alt="{{contactIcon.alt}}" (click)="cp.classList.toggle('active')">
+                    <img src="{{contactIcon.path}}" alt="{{contactIcon.alt}}" (click)="cp.classList.toggle('active')" loading="lazy">
                     <app-contactpoint *ngFor="let contact of item.contactpoints" [contact]="contact"></app-contactpoint>
                 </div>
                 <div #addr class="address">
-                    <img src="{{addressIcon.path}}" alt="{{addressIcon.alt}}" (click)="addr.classList.toggle('active')">
+                    <img src="{{addressIcon.path}}" alt="{{addressIcon.alt}}" (click)="addr.classList.toggle('active')" loading="lazy">
                     <app-address [address]="item.address"></app-address>
                 </div>
             </div>
