--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,11 +2,16 @@
 
 * {
     box-sizing: border-box;
-    font-family: $sans;
 }
 
 h1, h2, h3, h4, h5, h6 {
     margin:0;
+    font-family: $mono;
+}
+
+p, form {
+    margin:0;
+    font-family: $sans;
 }
 
 body{
