--- a/src/app/components/views/projects/projects.component.scss
+++ b/src/app/components/views/projects/projects.component.scss
@@ -9,6 +9,9 @@
         & .content {
             @include flex-e2e;
         }
+        & app-button p {
+            @include slimpill;
+        }
     }
     & .skillpill{
         @include pill;
