added skills to careers

--- a/src/app/components/general/skills/skills-percent/skills-percent.component.scss
+++ b/src/app/components/general/skills/skills-percent/skills-percent.component.scss
@@ -2,6 +2,7 @@
 @import 'src/scss/mixins.scss';
 
 :host {
+    width: 100%;
     & .skill-container {
         @include flex-list;
         &> div {
