--- a/src/app/components/general/filter/filter.component.html
+++ b/src/app/components/general/filter/filter.component.html
@@ -1,4 +1,15 @@
-<p>{{filtersSelected$ | async | json}}</p>
+<h3>Filter</h3>
+
+<div #cat *ngFor="let category of filters.categories">
+    <h4 (click)="cat.classList.toggle('active')">{{category.name}}</h4>
+    <div class="tags">
+        <div *ngFor="let tag of category.tags" (click)="toggleTag(tag)">{{tag.name}}</div>
+    </div>
+</div>
+
+
+
+<!-- p>{{filtersSelected$ | async | json}}</p>
 <form #filterForm="ngForm">
     {{filterForm.value | json}}
     <div class="filter-item" *ngFor="let filter of filterValues | keyvalue">
@@ -8,5 +19,5 @@
 </form>
 <div *ngFor="let filter of filterValues | keyvalue">
     <div #filterItem class="filter" (click)="filterItem.classList.toggle('active')">{{filter.value}}</div>
-</div>
+</div -->
 
