--- a/src/app/components/general/skills/skills-percent/skills-percent.component.html
+++ b/src/app/components/general/skills/skills-percent/skills-percent.component.html
@@ -1,5 +1,6 @@
 <h5>{{name}}</h5>
-<div class="skill-container" *ngFor="let skill of skills | skillsFilter:['Applikation']">
+<app-sort [fields]="sortFields" (selectedEmitter)="sortSkillsBy($event)"></app-sort>
+<div class="skill-container" *ngFor="let skill of skills | skillsSort:sortValue:sortAsc">
     <div class="percent-{{skill.knowledgepercent}}">
         <p *ngIf="!skill.url">{{skill.knowledgepercent}}% {{skill.name}}</p>
         <a *ngIf="skill.url" href="{{skill.url}}"  target="_blank">{{skill.knowledgepercent}}% {{skill.name}}</a>
