implemented filtering by skill for projects

--- a/src/app/components/general/contentbox/contentbox.component.html
+++ b/src/app/components/general/contentbox/contentbox.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="hasImage" #cbToggle>
+<div #cbToggle>
     <div class="preview" (click)="cbToggle.classList.toggle('active')">
         <img *ngIf="preview" class="previewImg" src="{{preview.path}}" alt="{{preview.alt}}" loading="lazy">
         
