--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -5,4 +5,5 @@
     <app-button [onClick]="callMe" [type]="lt.PHONE" name="Meine Telefonnummer"></app-button>
     <app-button [onClick]="mailMe" [type]="lt.MAIL" name="Meine E-Mail"></app-button>
 </app-contentbox>
-<app-skills-percent-list></app-skills-percent-list>
+<!-- app-skills-percent-list -->
+<app-skills-percent name="Skills" [skills]="skills"></app-skills-percent>
