implemented project filter, updated json data

--- a/src/app/components/general/contentbox/contentbox.component.html
+++ b/src/app/components/general/contentbox/contentbox.component.html
@@ -7,7 +7,7 @@
         
         <img class="arrowImg" src="{{arrowIcon.path}}" alt="{{arrowIcon.alt}}" loading="lazy">
     </div>
-    <div class="mainImg">
+    <div *ngIf="hasImage" class="mainImg">
         <app-carousel *ngIf="isCarousel" [images]="images"></app-carousel>
         <app-image *ngIf="!isCarousel" [image]="image"></app-image>
     </div>
