refactored / formatted code

--- a/src/app/components/general/sort/sort.component.html
+++ b/src/app/components/general/sort/sort.component.html
@@ -1,6 +1,6 @@
 <h4 class="sortTitle">Sortieren nach:</h4>
 <select #sortFields name="sortFields" id="sortFields" [(ngModel)]="selectedValue" (change)="selectItem()">
-    <option *ngFor="let field of fields; first as isFirst" [ngValue]="field">{{field.name}}</option>
+    <option *ngFor="let field of fields" [ngValue]="field">{{field.name}}</option>
 </select>
 <select #sortAsc name="sortAsc" id="sortAsc" [(ngModel)]="ascending" (change)="selectItem()">
     <option [ngValue]="true">Aufsteigend</option>
